--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   </main>
 
   <button id="theme-toggle">🧭</button>
+  <button id="music-toggle">🎵</button>
 
   <footer>
     <p>Made with love for Nakamas around the world 🌎</p>
