--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
   <button id="theme-toggle">🧭</button>
   <button id="music-toggle">🎵</button>
+  <audio id="binks-audio" src="binks-sake.mp3" preload="auto" loop></audio>
 
   <footer>
     <p>Made with love for Nakamas around the world 🌎</p>
